--- a/src/templates/pages/elements/stepCrumb.html
+++ b/src/templates/pages/elements/stepCrumb.html
@@ -5,10 +5,25 @@
 ## StepCrumb
 {% endmarkdown %}
 
-<div class="note note--subtle note--large note--icon085 m-t-8">
-    <h3 class="note__headline">Documentation Incomplete</h3>
-    <div class="note__body">
-        <p>To be completed soon.</p>
+<div class="documentation__block">
+    <div class="documentation__example" data-printcode="language:markup; print:true;">
+        <ul id="foo" class="stepCrumb stepCrumb--step3">
+            <li class="stepCrumb__item">
+                <a class="stepCrumb__label">Denial</a>
+            </li>
+            <li class="stepCrumb__item">
+                <a class="stepCrumb__label">Anger</a>
+            </li>
+            <li class="stepCrumb__item">
+                <a class="stepCrumb__label">Bargaining</a>
+            </li>
+            <li class="stepCrumb__item">
+                <a class="stepCrumb__label">Depression</a>
+            </li>
+            <li class="stepCrumb__item">
+                <a class="stepCrumb__label">Acceptance</a>
+            </li>
+        </ul>
     </div>
 </div>
 
