changed CDN path

--- a/src/assets/less/theme/options.less
+++ b/src/assets/less/theme/options.less
@@ -7,4 +7,4 @@
 @debugBemModifiers:             false;
 @debugImages:                   false;
 @debugFloats:                   false;
-@dynamicSvgDomain:              '//localhost/svg.php';
+@dynamicSvgDomain:              'http://cdn.yoshino.digital/svg.php';
