--- a/src/assets/less/elements/rating.less
+++ b/src/assets/less/elements/rating.less
@@ -41,14 +41,14 @@
     // only active stars
 
     &::before {
-        background-image: url(~'@{dynamicSvgDomain}?id=icon-039&f=@{activeStarColor}&w=32&h=32');
+        background-image: url(~'@{cdnDomain}?id=icon-039&f=@{activeStarColor}&w=32&h=32');
         left: 0;
     }
 
     // only inactive stars
 
     &::after {
-        background-image: url(~'@{dynamicSvgDomain}?id=icon-039&f=@{inactiveStarColor}&w=32&h=32');
+        background-image: url(~'@{cdnDomain}?id=icon-039&f=@{inactiveStarColor}&w=32&h=32');
         right: 0;
     }
 
@@ -186,8 +186,8 @@
     height: 1.9rem;
     width: 5 * 1.9rem;
 
-    &::before { background-image: url(~'@{dynamicSvgDomain}?id=icon-039&f=@{activeStarColor}&w=19&h=19'); }
-    &::after { background-image: url(~'@{dynamicSvgDomain}?id=icon-039&f=@{inactiveStarColor}&w=19&h=19'); }
+    &::before { background-image: url(~'http://@{cdnDomain}/?id=icon-039&f=@{activeStarColor}&w=19&h=19'); }
+    &::after { background-image: url(~'http://@{cdnDomain}/?id=icon-039&f=@{inactiveStarColor}&w=19&h=19'); }
 
 }
 
@@ -196,8 +196,8 @@
     height: 2.4rem;
     width: 5 * 2.4rem;
 
-    &::before { background-image: url(~'@{dynamicSvgDomain}?id=icon-039&f=@{activeStarColor}&w=24&h=24'); }
-    &::after { background-image: url(~'@{dynamicSvgDomain}?id=icon-039&f=@{inactiveStarColor}&w=24&h=24'); }
+    &::before { background-image: url(~'http://@{cdnDomain}/?id=icon-039&f=@{activeStarColor}&w=24&h=24'); }
+    &::after { background-image: url(~'http://@{cdnDomain}/?id=icon-039&f=@{inactiveStarColor}&w=24&h=24'); }
 
 }
 
@@ -206,7 +206,7 @@
     height: 4.8rem;
     width: 5 * 4.8rem;
 
-    &::before { background-image: url(~'@{dynamicSvgDomain}?id=icon-039&f=@{activeStarColor}&w=48&h=48'); }
-    &::after { background-image: url(~'@{dynamicSvgDomain}?id=icon-039&f=@{inactiveStarColor}&w=48&h=48'); }
+    &::before { background-image: url(~'http://@{cdnDomain}/?id=icon-039&f=@{activeStarColor}&w=48&h=48'); }
+    &::after { background-image: url(~'http://@{cdnDomain}/?id=icon-039&f=@{inactiveStarColor}&w=48&h=48'); }
 
 }
