--- a/src/assets/less/elements/box.less
+++ b/src/assets/less/elements/box.less
@@ -7,6 +7,7 @@
 
     .mixin-clearfix;
     .mixin-defaultBorderRadius;
+    border: @color-main-23 1px solid;
     box-sizing: border-box;
     display: block;
     font-family: @font-sansserif;
@@ -23,17 +24,17 @@
 
     .mixin-clearfix;
 
-    [class*="box-"]:first-child {
+    .box:first-child {
         border-radius: (@borderRadius * 1px) (@borderRadius * 1px) 0 0;
         margin: 0;
     }
 
-    [class*="box-"] + [class*="box-"] {
+    .box + .box {
         border-radius: 0;
         border-top: 0;
     }
 
-    [class*="box-"]:last-child {
+    .box:last-child {
         border-radius: 0 0 (@borderRadius * 1px) (@borderRadius * 1px);
     }
 
@@ -46,6 +47,8 @@
     @h4();
     margin: 0;
     padding: .5rem 1rem;
+    background: @color-main-25;
+    border-bottom: @color-main-23 1px solid;
 }
 
 .box__body {
@@ -63,75 +66,6 @@
 
     & + & {
         border-top: @color-main-23 1px solid;
-    }
-
-}
-
-// modifiers
-// =========
-
-.box--1 {
-    background-color: #fff;
-    border: @color-main-23 1px solid;
-}
-
-.box--2 {
-
-    background-color: #fff;
-    border: @color-main-23 1px solid;
-
-    .box__header {
-        background: @color-main-25;
-        border-bottom: @color-main-23 1px solid;
-    }
-
-}
-
-.box--3 {
-
-    background-color: @color-main-25;
-    border: @color-main-23 1px solid;
-
-    .box__header {
-        border-bottom: @color-main-23 1px solid;
-    }
-
-    .box__body + .box__body {
-        border-top: @color-main-23 1px solid;
-    }
-
-}
-
-.box--4 {
-
-    background-color: #fff;
-    border: @color-main-10 2px solid;
-
-    .box__header {
-        background: @color-main-25;
-        border-bottom: @color-main-23 1px solid;
-    }
-
-}
-
-.box--5 {
-
-    background-color: @color-main-25;
-
-    .box__header {
-        border-bottom: @color-main-24 1px solid;
-    }
-
-}
-
-.box--6 {
-
-    background-color: @color-main-7;
-    border-color: @color-main-7;
-    color: @color-main-24;
-
-    .box__header {
-        border-bottom: @color-main-8 1px solid;
     }
 
 }
