--- a/src/templates/pages/elements/box.html
+++ b/src/templates/pages/elements/box.html
@@ -9,86 +9,17 @@
 | -              | -                                                               |
 | Less-File      | [box.less]({{ pathToSourceFile }}assets/less/elements/box.less) |
 | Base CSS-Class | `.box`                                                          |
-| Modifiers      | `.box--1, .box--2, .box--3, .box--4`                            |
+| Modifiers      | `-`                                                             |
 
-### Basic Example with Optional Header
+### Basic Example
 {% endmarkdown %}
 
 <div class="documentation__block">
     <div class="documentation__example" data-printcode="language:markup; print:true;">
-        <div class="box box--1">
+        <div class="box">
             <h4 class="box__header">Optional Headline</h4>
             <div class="box__body">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="documentation__block">
-    <div class="documentation__example" data-printcode="language:markup; print:true;">
-        <div class="box box--1">
-            <h4 class="box__header">Optional Headline</h4>
-            <div class="box__body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-        </div>
-    </div>
-</div>
-
-{% markdown %}
-### Variations
-Chose from one of the five different stylings:
-{% endmarkdown %}
-
-<div class="documentation__blocks">
-    <div class="documentation__block">
-        <div class="documentation__example" data-printcode="language:markup; print:true;">
-            <div class="box box--1">
-                <h4 class="box__header">Headline</h4>
-                <div class="box__body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="documentation__block">
-        <div class="documentation__example" data-printcode="language:markup; print:true;">
-            <div class="box box--2">
-                <h4 class="box__header">Headline</h4>
-                <div class="box__body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="documentation__block">
-        <div class="documentation__example" data-printcode="language:markup; print:true;">
-            <div class="box box--3">
-                <h4 class="box__header">Headline</h4>
-                <div class="box__body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="documentation__block">
-        <div class="documentation__example" data-printcode="language:markup; print:true;">
-            <div class="box box--4">
-                <h4 class="box__header">Headline</h4>
-                <div class="box__body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="documentation__block">
-        <div class="documentation__example" data-printcode="language:markup; print:true;">
-            <div class="box box--5">
-                <h4 class="box__header">Headline</h4>
-                <div class="box__body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                </div>
             </div>
         </div>
     </div>
